// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Surfaces/Card Actions 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
  data-cy="card"
  style={
    {
      "margin": "16px",
      "width": "calc(100% - 32px)",
    }
  }
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-1540tig-MuiTypography-root"
        data-cy="card-title"
      >
        Mosaic
      </h2>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-840020-MuiTypography-root"
        data-cy="card-subtitle"
      >
        UK: /mə(ʊ)ˈzeɪɪk/
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    data-cy="card-content"
    style={
      {
        "padding": "8px 16px",
      }
    }
  >
    A mosaic is an artistic picture or design made out of any materials assembled together.
  </div>
  <div
    className="MuiCardActions-root css-1rwjz6-MuiCardActions-root"
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
        "padding": "8px 16px",
      }
    }
  >
    <div
      style={
        {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <div
        style={
          {
            "marginRight": "16px",
          }
        }
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation css-zddlty-MuiButtonBase-root-MuiButton-root"
          data-cy="button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
              data-cy="button-icon"
              data-testid="OpenInNewIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </span>
          Gallery
        </button>
         
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Surfaces/Card Collapsible 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
  data-cy="card"
  style={
    {
      "margin": "16px",
      "width": "calc(100% - 32px)",
    }
  }
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-1540tig-MuiTypography-root"
        data-cy="card-title"
      >
        Mosaic
      </h2>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-840020-MuiTypography-root"
        data-cy="card-subtitle"
      >
        UK: /mə(ʊ)ˈzeɪɪk/
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    data-cy="card-content"
    style={
      {
        "padding": "8px 16px",
      }
    }
  >
    A mosaic is an artistic picture or design made out of any materials assembled together.
  </div>
  <div
    className="MuiCardActions-root css-1rwjz6-MuiCardActions-root"
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
        "padding": "8px 16px",
      }
    }
  >
    <button
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
      data-cy="card-collapse"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
        data-cy="card-collapse-icon"
        data-testid="KeyboardArrowDownIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
        />
      </svg>
    </button>
  </div>
  <div
    className="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
    style={
      {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      >
        <div
          className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-cy="card-collapsible-content"
          style={
            {
              "padding": "8px 16px",
            }
          }
        >
          Discover mosaics from all around the globe!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Surfaces/Card Collapsible Actions 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
  data-cy="card"
  style={
    {
      "margin": "16px",
      "width": "calc(100% - 32px)",
    }
  }
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-1540tig-MuiTypography-root"
        data-cy="card-title"
      >
        Mosaic
      </h2>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-840020-MuiTypography-root"
        data-cy="card-subtitle"
      >
        UK: /mə(ʊ)ˈzeɪɪk/
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    data-cy="card-content"
    style={
      {
        "padding": "8px 16px",
      }
    }
  >
    A mosaic is an artistic picture or design made out of any materials assembled together.
  </div>
  <div
    className="MuiCardActions-root css-1rwjz6-MuiCardActions-root"
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
        "padding": "8px 16px",
      }
    }
  >
    <div
      style={
        {
          "alignItems": "center",
          "display": "flex",
        }
      }
    >
      <div
        style={
          {
            "marginRight": "16px",
          }
        }
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation css-zddlty-MuiButtonBase-root-MuiButton-root"
          data-cy="button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
              data-cy="button-icon"
              data-testid="OpenInNewIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </span>
          Gallery
        </button>
         
      </div>
    </div>
    <button
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
      data-cy="card-collapse"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
        data-cy="card-collapse-icon"
        data-testid="KeyboardArrowDownIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
        />
      </svg>
    </button>
  </div>
  <div
    className="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
    style={
      {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      >
        <div
          className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-cy="card-collapsible-content"
          style={
            {
              "padding": "8px 16px",
            }
          }
        >
          Discover mosaics from all around the globe!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Surfaces/Card Icon 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
  data-cy="card"
  style={
    {
      "margin": "16px",
      "width": "calc(100% - 32px)",
    }
  }
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-avatar css-1ssile9-MuiCardHeader-avatar"
    >
      <div
        className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-2s90m6-MuiAvatar-root"
        data-cy="card-avatar"
        style={
          {
            "backgroundColor": "#1976d2",
            "color": "#fff",
          }
        }
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wnp694-MuiSvgIcon-root"
          data-cy="card-avatar-icon"
          data-testid="AppsIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 8h4V4H4v4zm6 12h4v-4h-4v4zm-6 0h4v-4H4v4zm0-6h4v-4H4v4zm6 0h4v-4h-4v4zm6-10v4h4V4h-4zm-6 4h4V4h-4v4zm6 6h4v-4h-4v4zm0 6h4v-4h-4v4z"
          />
        </svg>
      </div>
    </div>
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-1540tig-MuiTypography-root"
        data-cy="card-title"
      >
        Mosaic
      </h2>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-840020-MuiTypography-root"
        data-cy="card-subtitle"
      >
        UK: /mə(ʊ)ˈzeɪɪk/
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    data-cy="card-content"
    style={
      {
        "padding": "8px 16px",
      }
    }
  >
    A mosaic is an artistic picture or design made out of any materials assembled together.
  </div>
  <div
    className="MuiCardActions-root css-1rwjz6-MuiCardActions-root"
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
        "padding": "8px 16px",
      }
    }
  />
</div>
`;

exports[`Storyshots Surfaces/Card Loading 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
  data-cy="card"
  style={
    {
      "margin": "16px",
      "width": "calc(100% - 32px)",
    }
  }
>
  <div
    className="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-avatar css-1ssile9-MuiCardHeader-avatar"
    >
      <span
        className="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto css-1gtw0ls-MuiSkeleton-root"
        style={
          {
            "height": undefined,
            "width": undefined,
          }
        }
      >
        <div
          className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-2s90m6-MuiAvatar-root"
          data-cy="card-avatar-loading"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiAvatar-fallback css-10mi8st-MuiSvgIcon-root-MuiAvatar-fallback"
            data-testid="PersonIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
            />
          </svg>
        </div>
      </span>
    </div>
    <div
      className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
    >
      <h2
        className="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap css-1540tig-MuiTypography-root"
        data-cy="card-title-loading"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </h2>
      <span
        className="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-840020-MuiTypography-root"
        data-cy="card-subtitle-loading"
      >
        <span
          className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
          style={
            {
              "height": undefined,
              "width": undefined,
            }
          }
        />
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
    data-cy="card-content"
    style={
      {
        "padding": "8px 16px",
      }
    }
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
      style={
        {
          "height": "128px",
          "width": undefined,
        }
      }
    />
  </div>
</div>
`;
